--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 			</div>
 		</div>
 		
-		<div class="container">
+		<div class="container" hidden="true" >
 		  <div class="row">
 		      <div class="col-md-8 col-md-offset-2">
 		        <div id="sendmessage">Tu mensaje se ha enviado, pronto nos comunicaremos contigo!</div>
